# voice-notes-keeper-b45cc5be

./: README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: SaveRecordingDialog.tsx  ToastNotification.tsx
src/lib/: db.ts  recorder.ts
src/pages/: Index.tsx  RecordingScreen.tsx  RecordingsList.tsx
src/types/: recording.ts
